# mnozenie

./: .pre-commit-config.yaml  czytanie-sentences.txt  justfile  pyproject.toml
Mnozenie/: __init__.py  czytanie.py  czytanie_scoring.py  dictation_words.txt  mnozenie.py  orthography_gen.py  say.py  sound_recorder.py  voice_sample.py
tests/: test_scoring.py
