[tool.poetry]
name = "mnozenie"
version = "0.1.0"
description = ""
authors = ["Adam Ryczkowski <adam@statystyka.net>"]
readme = "README.md"
packages = [{ include = "Mnozenie", from = '.' }]


[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.3.0"
openai = "^1.30.3"
gtts = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mnozenie = 'Mnozenie.mnozenie:main'